fix: added missing margin between tabs and cards

--- a/packages/storybook/src/templates/template-story.scss
+++ b/packages/storybook/src/templates/template-story.scss
@@ -20,4 +20,8 @@
   & &__task {
     margin-block-start: 32px;
   }
+
+  & .denhaag-tabs {
+    margin-block-end: 40px;
+  }
 }
